<resources>
    <string name="app_name">TMDB_APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="movie_poster">movie poster</string>
    <string name="title">Title</string>
    <string name="release_date">release date</string>
    <string name="average_rate">average rate</string>
    <string name="movie_overview">movie overview</string>
    <string name="movie_title">Movie title</string>
</resources>